--- a/3_Working with Text.ipynb
+++ b/3_Working with Text.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Introduction"
+    "# Working with Text"
    ]
   },
   {
@@ -15,7 +15,7 @@
     {
      "data": {
       "text/plain": [
-       "17"
+       "'Aristotle'"
       ]
      },
      "execution_count": 1,
@@ -24,7 +24,7 @@
     }
    ],
    "source": [
-    "4 + 13"
+    "'Aristotle'"
    ]
   },
   {
@@ -35,7 +35,7 @@
     {
      "data": {
       "text/plain": [
-       "12"
+       "'Isaac Newton'"
       ]
      },
      "execution_count": 2,
@@ -44,7 +44,7 @@
     }
    ],
    "source": [
-    "15 - 3"
+    "\"Isaac Newton\""
    ]
   },
   {
@@ -55,7 +55,7 @@
     {
      "data": {
       "text/plain": [
-       "28"
+       "15"
       ]
      },
      "execution_count": 3,
@@ -64,7 +64,7 @@
     }
    ],
    "source": [
-    "4 * 7"
+    "len('Albert Einstein')"
    ]
   },
   {
@@ -75,7 +75,7 @@
     {
      "data": {
       "text/plain": [
-       "2.5"
+       "4"
       ]
      },
      "execution_count": 4,
@@ -84,7 +84,7 @@
     }
    ],
    "source": [
-    "5 / 2"
+    "len('123!')"
    ]
   },
   {
@@ -95,7 +95,7 @@
     {
      "data": {
       "text/plain": [
-       "2.0"
+       "1"
       ]
      },
      "execution_count": 5,
@@ -104,7 +104,7 @@
     }
    ],
    "source": [
-    "4 / 2"
+    "len(' ')"
    ]
   },
   {
@@ -115,7 +115,7 @@
     {
      "data": {
       "text/plain": [
-       "7.0"
+       "0"
       ]
      },
      "execution_count": 6,
@@ -124,7 +124,7 @@
     }
    ],
    "source": [
-    "17.0 - 10.0"
+    "len('')"
    ]
   },
   {
@@ -135,7 +135,7 @@
     {
      "data": {
       "text/plain": [
-       "7.0"
+       "'Albert Einstein'"
       ]
      },
      "execution_count": 7,
@@ -144,7 +144,7 @@
     }
    ],
    "source": [
-    "17.0 - 10"
+    "'Albert' + ' Einstein'"
    ]
   },
   {
@@ -155,7 +155,7 @@
     {
      "data": {
       "text/plain": [
-       "2"
+       "'Four scores and 7 years ago'"
       ]
      },
      "execution_count": 8,
@@ -164,8 +164,7 @@
     }
    ],
    "source": [
-    "\n",
-    "53 // 24"
+    "'Four scores and ' + str(7) + ' years ago'"
    ]
   },
   {
@@ -176,7 +175,7 @@
     {
      "data": {
       "text/plain": [
-       "5"
+       "'ATATATATAT'"
       ]
      },
      "execution_count": 9,
@@ -185,7 +184,7 @@
     }
    ],
    "source": [
-    "53 % 24"
+    "'AT' * 5"
    ]
   },
   {
@@ -194,18 +193,16 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "3.0"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "one\ttwo\n",
+      "three\tfour\n"
+     ]
     }
    ],
    "source": [
-    "3.3 // 1"
+    "print('one\\ttwo\\nthree\\tfour')"
    ]
   },
   {
@@ -214,18 +211,22 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "3.0"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "one\n",
+      "two\n",
+      "three\n",
+      "\n"
+     ]
     }
    ],
    "source": [
-    "3.3 // 1.0"
+    "numbers = '''one\n",
+    "two\n",
+    "three\n",
+    "'''\n",
+    "print(numbers)"
    ]
   },
   {
@@ -234,18 +235,15 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "729"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3\n"
+     ]
     }
    ],
    "source": [
-    "3 ** 6"
+    "print(1, 2, 3)"
    ]
   },
   {
@@ -254,18 +252,15 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "194.22222222222223"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a,b,c"
+     ]
     }
    ],
    "source": [
-    "212 - ((32 * 5) / 9)"
+    "print('a', 'b', 'c', sep=',', end='')"
    ]
   },
   {
@@ -274,27 +269,64 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "100.0"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "80, 78.8, and 10.4 degrees Fahrenheit are equal to 26.666666666666668, \n",
+      "26.0, and -12.0 Celsius.\n"
+     ]
     }
    ],
    "source": [
-    "(212 - 32) * 5/9"
+    "def convert_to_celsius(fehrenhait:float)->float:\n",
+    "    '''Converts a given temperature in fehrenhait to celsius\n",
+    "    \n",
+    "    >>> convert_to_celsius(75)\n",
+    "    23.8888888889\n",
+    "    '''\n",
+    "    return (fehrenhait - 32.0) * 5.0 / 9.0\n",
+    "\n",
+    "print('80, 78.8, and 10.4 degrees Fahrenheit are equal to ', end='')\n",
+    "print(convert_to_celsius(80), end=', \\n')\n",
+    "print(convert_to_celsius(78.8), end=', and ')\n",
+    "print(convert_to_celsius(10.4), end=' Celsius.\\n')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lfjfj\n"
+     ]
+    }
+   ],
    "source": [
-    "degrees_celsius = 26.0"
+    "species = input()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'lfjfj'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "species"
    ]
   },
   {
@@ -303,9 +335,16 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "jsjdjds\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "78.80000000000001"
+       "'jsjdjds'"
       ]
      },
      "execution_count": 17,
@@ -314,7 +353,8 @@
     }
    ],
    "source": [
-    "9 / 5 * degrees_celsius + 32"
+    "population = input()\n",
+    "population"
    ]
   },
   {
@@ -325,7 +365,7 @@
     {
      "data": {
       "text/plain": [
-       "1.0"
+       "str"
       ]
      },
      "execution_count": 18,
@@ -334,121 +374,114 @@
     }
    ],
    "source": [
-    "degrees_celsius / degrees_celsius"
+    "type(population)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercises"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'computer science'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'computer'+' science'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"Darwin's\""
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'Darwin\\'s'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"They'll herbanate during the winter\""
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"They'll herbanate during the winter\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "degrees_celsius = 15.5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "84.5"
+       "'\"Absolutely not\" he said'"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "difference = 100 - degrees_celsius\n",
-    "difference"
+    "'\"Absolutely not\" he said'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "31.0"
+       "'left\\right'"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "degrees_celsius = 26.0 + 5\n",
-    "degrees_celsius"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'moogah' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-26-91cc18ebfde9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;36m3\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mmoogah\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'moogah' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "3 + moogah"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "( 2 + \n",
-    "3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "2 + \\\n",
-    "3"
+    "'left\\right'"
    ]
   },
   {
@@ -459,7 +492,7 @@
     {
      "data": {
       "text/plain": [
-       "7.833333333333333"
+       "'nononono'"
       ]
      },
      "execution_count": 30,
@@ -468,194 +501,9 @@
     }
    ],
    "source": [
-    "room_temp = 20.0\n",
-    "cooking_temp = 350\n",
-    "oven_cook_rate = 20\n",
-    "oven_temp_time = (((cooking_temp - 32)* 5 /9 ) - room_temp)/ oven_cook_rate\n",
-    "oven_temp_time"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(4 + 3) - 5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "-9 % 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-1"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "9 % -2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "20.0"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "8 * 2.5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-5"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "9 // -2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-17"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x = -17\n",
-    "+x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "75.2"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "temp = 24\n",
-    "temp = temp * 1.8 + 32\n",
-    "temp"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(-(-(-(-5))))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "64"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "((((4 ** 3))))"
+    "def repeat(s:str, n:int)->str:\n",
+    "    return s * n\n",
+    "repeat('no', 4)"
    ]
   },
   {
@@ -668,9 +516,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.7.4 64-bit ('base': conda)",
    "language": "python",
-   "name": "python3"
+   "name": "python37464bitbaseconda02803511e82243628460d84236bfc9e6"
   },
   "language_info": {
    "codemirror_mode": {
@@ -686,7 +534,10 @@
   },
   "toc": {
    "base_numbering": 1,
-   "nav_menu": {},
+   "nav_menu": {
+    "height": "66px",
+    "width": "160px"
+   },
    "number_sections": true,
    "sideBar": true,
    "skip_h1_title": false,
