making choices, Program organisation

--- a/4_Making Choices.ipynb
+++ b/4_Making Choices.ipynb
@@ -6,6 +6,589 @@
    "source": [
     "# Making Choices"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "not False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "not True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "45 > 34"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "45 > 79"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "23.1 >= 23"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "67.3 == 87"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "67.0 != 67"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def is_positive(x:float)->bool:\n",
+    "    ''' returns True iff x is positive\n",
+    "    \n",
+    "    >>> is_positive(2)\n",
+    "    True\n",
+    "    >>> is_positive(-1)\n",
+    "    False\n",
+    "    >>> is_positive(0)\n",
+    "    False\n",
+    "    '''\n",
+    "    return x > 0\n",
+    "\n",
+    "is_positive(20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "is_positive(-43)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "is_positive(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'jan' in '01 jan 2020'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a date in this format DD MNT YYYY : 12, APR 1987\n"
+     ]
+    }
+   ],
+   "source": [
+    "date = input('Enter a date in this format DD MNT YYYY : ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'JAN' in date"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'APR' in date"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'a' in 'abc'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'A' in 'abc'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'' in 'abc'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "' ' in ''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'' in ''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the ph level : 4\n",
+      "4.0 is acidic\n"
+     ]
+    }
+   ],
+   "source": [
+    "ph = float(input('Enter the ph level : '))\n",
+    "if ph < 7:\n",
+    "    print(f'{ph} is acidic')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the ph level : 90\n",
+      "90.0 is basic\n"
+     ]
+    }
+   ],
+   "source": [
+    "ph = float(input('Enter the ph level : '))\n",
+    "if ph < 7.0 :\n",
+    "    print(f'{ph} is acidic')\n",
+    "if ph > 7.0:\n",
+    "    print(f'{ph} is basic')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a compound : 45\n",
+      "Unknown Compound\n"
+     ]
+    }
+   ],
+   "source": [
+    "compound = input('Enter a compound : ')\n",
+    "if compound == 'H2O':\n",
+    "    print('Water')\n",
+    "elif compound == 'NH4':\n",
+    "    print('Ammonia')\n",
+    "elif compound == 'CH4':\n",
+    "    print('Methane')\n",
+    "else :\n",
+    "    print('Unknown Compound')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "True and not False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'false' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-29-26bb4bd532dd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mTrue\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mfalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'false' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "True and not false"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "True or True and False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100 degree fehrenhait is equal to 311 degree kelvin\n"
+     ]
+    }
+   ],
+   "source": [
+    "def convert_temperature(t:float, source:str, target:str)->float:\n",
+    "    \"\"\"Converts temperature unit to another, where source is the present temperature unit and \n",
+    "    target is the conversion unit\n",
+    "    \n",
+    "    >>> convert_temperature(212, 'fehrenhait', 'celsius')\n",
+    "    100\n",
+    "    >>> convert_temperature(40, 'celsius', 'kelvin')\n",
+    "    313\n",
+    "    >>> convert_temperature(100, 'fehrenhait', 'kelvin')\n",
+    "    310\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    if source=='fehrenhait' and target=='celsius':\n",
+    "        celsius = (t - 32) * 5 / 9\n",
+    "        print(f'{t} degree {source} is equal to {round(celsius)} degree {target}')\n",
+    "    elif source=='celsius' and target=='fehrenhait':\n",
+    "        fehrenhait = (t * (9 /5)) + 32\n",
+    "        print(f'{t} degree {source} is equal to {round(fehrenhait)} degree {target}')\n",
+    "    elif source=='celsius' and target=='kelvin':\n",
+    "        kelvin = t + 273.15 \n",
+    "        print(f'{t} degree {source} is equal to {round(kelvin)} degree {target}')\n",
+    "    elif source=='kelvin' and target=='celsius':\n",
+    "        celsius = t - 273.15 \n",
+    "        print(f'{t} degree {source} is equal to {round(celsius)} degree {target}')\n",
+    "    elif source=='fehrenhait' and target=='kelvin':\n",
+    "        kelvin = (t + 459.67) * 5.0 / 9.0\n",
+    "        print(f'{t} degree {source} is equal to {round(kelvin)} degree {target}')\n",
+    "    elif source=='kelvin' and target=='fehrenhait':\n",
+    "        fehrenhait = (t * 9.0 / 5.0) - 459.67 \n",
+    "        print(f'{t} degree {source} is equal to {round(fehrenhait)} degree {target}')\n",
+    "    \n",
+    "    else:\n",
+    "        print('Enter an appopriate value')\n",
+    "\n",
+    "convert_temperature(100, 'fehrenhait', 'kelvin')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
