--- a/8_Reading and Writing Files.ipynb
+++ b/8_Reading and Writing Files.ipynb
@@ -18,7 +18,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "%reload_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {
     "hidden": true
    },
@@ -44,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {
     "hidden": true
    },
@@ -70,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {
     "hidden": true
    },
@@ -104,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {
     "hidden": true
    },
@@ -134,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {
     "hidden": true
    },
@@ -155,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
    "metadata": {
     "hidden": true
    },
@@ -166,7 +178,7 @@
        "['Mercury\\n', 'Venus\\n', 'Earth\\n', 'Mars\\n']"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 8,
    "metadata": {
     "hidden": true
    },
@@ -203,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 9,
    "metadata": {
     "hidden": true
    },
@@ -227,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 10,
    "metadata": {
     "hidden": true
    },
@@ -261,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,52 +283,225 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "with open('topics.txt', 'a') as file_object:\n",
+    "    file_object.write('\\nSoftware Engineering')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from typing import TextIO\n",
+    "from io import StringIO\n",
+    "\n",
+    "def sum_number_pair(input_file:TextIO, output_file:TextIO) -> None:\n",
+    "    \"\"\"Read the data from input_file, which contains two floats per line\n",
+    "    separated by a space. output_file for writing and, for each line in\n",
+    "    input_file, write a line to output_file that contains the two floats from\n",
+    "    the corresponding line of input_file plus a space and the sum of the two\n",
+    "    floats.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    for number_pair in input_file:\n",
+    "        number_pair = number_pair.strip()\n",
+    "        operands = number_pair.split()\n",
+    "        total = float(operands[0]) + float(operands[1])\n",
+    "        newline = '{0} {1}\\n'.format(number_pair, total)\n",
+    "        output_file.write(f'{operands} {total}')\n",
+    "if __name__ == '__main__':\n",
+    "    with open('number_pairs.txt', 'r')as input_file,\\\n",
+    "    open('number_pairs_sum.txt', 'w') as output_file:\n",
+    "        sum_number_pair(input_file, output_file)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1.3 3.4\\n2 4.2\\n-1 1\\n'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "infile = StringIO('1.3 3.4\\n2 4.2\\n-1 1\\n')\n",
+    "infile.getvalue()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from typing import TextIO\n",
+    "from io import StringIO\n",
+    "\n",
+    "def sum_number_pair(input_file:TextIO, output_file:TextIO) -> None:\n",
+    "    \"\"\"Read the data from input_file, which contains two floats per line\n",
+    "    separated by a space. output_file for writing and, for each line in\n",
+    "    input_file, write a line to output_file that contains the two floats from\n",
+    "    the corresponding line of input_file plus a space and the sum of the two\n",
+    "    floats.\n",
+    "    \n",
+    "    >>> infile = StringIO('1.3 3.4\\\\n2 4.2\\\\n-1 1\\\\n')\n",
+    "    >>> output = StringIO()\n",
+    "    >>> sum_number_pair(infile, output)\n",
+    "    >>> output.getvalue()\n",
+    "    '1.3 3.4 4.7\\\\n2 4.2 6.2\\\\n-1 1 0.0\\\\n'\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    for number_pair in input_file:\n",
+    "        number_pair = number_pair.strip()\n",
+    "        operands = number_pair.split()\n",
+    "        total = float(operands[0]) + float(operands[1])\n",
+    "        newline = '{0} {1}\\n'.format(number_pair, total)\n",
+    "        output_file.write(f'{number_pair} {total}')\n",
+    "if __name__ == '__main__':\n",
+    "    with open('number_pairs.txt', 'r')as input_file,\\\n",
+    "    open('number_pairs_sum.txt', 'w') as output_file:\n",
+    "        sum_number_pair(input_file, output_file)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "22\n",
+      "29\n",
+      "2\n",
+      "16\n",
+      "12\n",
+      "35\n",
+      "8\n",
+      "83\n",
+      "166\n"
+     ]
+    }
+   ],
+   "source": [
+    "from time_series import skip_header\n",
+    "\n",
+    "def process_file(reader:TextIO)->None:\n",
+    "    \"\"\"Read and print the data from reader, which must start with a single\n",
+    "    description line, then a sequence of lines beginning with '#', then a\n",
+    "    sequence of data.\n",
+    "    >>> infile = StringIO('Example\\\\n# Comment\\\\nLine 1\\\\nLine 2\\\\n')\n",
+    "    >>> process_file(infile)\n",
+    "    Line 1\n",
+    "    Line 2\n",
+    "    \"\"\"\n",
+    "    line = skip_header(reader).strip()\n",
+    "    print(line)\n",
+    "    for line in reader:\n",
+    "        line = line.strip()\n",
+    "        print(line)\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    with open('hopedale.txt', 'r') as input_file:\n",
+    "        process_file(input_file)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "**********************************************************************\n",
+      "File \"__main__\", line 14, in __main__.sum_number_pair\n",
+      "Failed example:\n",
+      "    output.getvalue()\n",
+      "Expected:\n",
+      "    '1.3 3.4 4.7\\n2 4.2 6.2\\n-1 1 0.0\\n'\n",
+      "Got:\n",
+      "    '1.3 3.4 4.72 4.2 6.2-1 1 0.0'\n",
+      "**********************************************************************\n",
+      "1 items had failures:\n",
+      "   1 of   4 in __main__.sum_number_pair\n",
+      "***Test Failed*** 1 failures.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "TestResults(failed=1, attempted=6)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from doctest import testmod\n",
+    "testmod()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mising values 2\n",
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "def find_smallest(reader:TextIO)-> int:\n",
+    "    \"\"\"Read and process reader and return the smallest value after the time_series header.\n",
+    "    \n",
+    "    >>> infile = StringIO('Example\\\\n1\\\\n2\\\\n3\\\\n')\n",
+    "    >>> find_smallest(infile)\n",
+    "    1\n",
+    "    >>> infile = StringIO('Example\\\\n3\\\\n1\\\\n2\\\\n')\n",
+    "    >>> find_smallest(infile)\n",
+    "    1\n",
+    "    \"\"\"\n",
+    "    smallest = int(skip_header(reader).strip())\n",
+    "    missing = 0\n",
+    "    for number in reader:\n",
+    "        number = number.strip()\n",
+    "        if number != '-':\n",
+    "            number = int(number)\n",
+    "            smallest = min(smallest, number)\n",
+    "       # calculates the amount of missing values in the data\n",
+    "        if number == '-':\n",
+    "            missing += 1\n",
+    "    print(f'mising values {missing}')\n",
+    "    return smallest\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    with open('hopedale.txt', 'r') as reader:\n",
+    "        smallest = find_smallest(reader)\n",
+    "        print(smallest)"
+   ]
   },
   {
    "cell_type": "code",
